--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <button class="btn">Check-Now</button>
 </div>
 <div class="data">
+    <div class="icon-wrapper">
 <img class="icon" alt="Weather icon">
+</div>
     <h2 class="temp"></h2>
     <p class="detail"></p>
 <h1 class="city-name"></h1>
     <div class="columns">
-    <p class="humidity">humid</p>
-<p class="visibility">visible</p>
+    <p class="humidity"></p>
+<p class="visibility"></p>
 </div>
 </div>
 </div>
